[tool.poetry]
name = "freshflow"
version = "0.1.0"
description = ""
authors = ["Scott Roriston <scottroriston@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^1.4.46"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pydantic = "^1.10.4"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.9"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
